crates/apollo-compiler/test_data/diagnostics/0054_argument_not_provided.txt
Error: the required argument `ComplicatedArgs.multipleReqs(req1:)` is not provided
    ╭─[ 0054_argument_not_provided.graphql:14:5 ]
    │
 14 │     multipleReqs
    │     ──────┬─────  
    │           ╰─────── missing value for argument `req1`
    │
    ├─[ 0054_argument_not_provided.graphql:14:5 ]
    │
  2 │   multipleReqs(req1: Int!, req2: Int!): String
    │                ─────┬────  
    │                     ╰────── argument defined here
────╯
Error: the required argument `ComplicatedArgs.multipleReqs(req2:)` is not provided
    ╭─[ 0054_argument_not_provided.graphql:14:5 ]
    │
 14 │     multipleReqs
    │     ──────┬─────  
    │           ╰─────── missing value for argument `req2`
    │
    ├─[ 0054_argument_not_provided.graphql:14:5 ]
    │
  2 │   multipleReqs(req1: Int!, req2: Int!): String
    │                            ─────┬────  
    │                                 ╰────── argument defined here
────╯
Error: the required argument `ComplicatedArgs.multipleReqs(req1:)` is not provided
    ╭─[ 0054_argument_not_provided.graphql:17:5 ]
    │
 17 │     onlyOneArg: multipleReqs(req2: 1)
    │     ────────────────┬────────────────  
    │                     ╰────────────────── missing value for argument `req1`
    │
    ├─[ 0054_argument_not_provided.graphql:17:5 ]
    │
  2 │   multipleReqs(req1: Int!, req2: Int!): String
    │                ─────┬────  
    │                     ╰────── argument defined here
────╯
Error: the required argument `@skip(if:)` is not provided
     ╭─[ 0054_argument_not_provided.graphql:21:9 ]
     │
  21 │   basic @skip @include(wrong: false) {
     │         ──┬──  
     │           ╰──── missing value for argument `if`
     │
     ├─[ built_in.graphql:141:3 ]
     │
 141 │ ╭─▶   "Skipped when true."
 142 │ ├─▶   if: Boolean!
     │ │                    
     │ ╰──────────────────── argument defined here
─────╯
Error: the required argument `@include(if:)` is not provided
     ╭─[ 0054_argument_not_provided.graphql:21:15 ]
     │
  21 │   basic @skip @include(wrong: false) {
     │               ───────────┬──────────  
     │                          ╰──────────── missing value for argument `if`
     │
     ├─[ built_in.graphql:147:3 ]
     │
 147 │ ╭─▶   "Included when true."
 148 │ ├─▶   if: Boolean!
     │ │                    
     │ ╰──────────────────── argument defined here
─────╯
Error: the argument `wrong` is not supported by `@include`
    ╭─[ 0054_argument_not_provided.graphql:21:24 ]
    │
 21 │   basic @skip @include(wrong: false) {
    │               ───────────┬───┬──────  
    │                          ╰──────────── @include defined here
    │                              │        
    │                              ╰──────── argument by this name not found
────╯
Error: the required argument `ComplicatedArgs.multipleReqs(req1:)` is not provided
    ╭─[ 0054_argument_not_provided.graphql:26:5 ]
    │
 26 │     a: multipleReqs(req2: 1)
    │     ────────────┬───────────  
    │                 ╰───────────── missing value for argument `req1`
    │
    ├─[ 0054_argument_not_provided.graphql:26:5 ]
    │
  2 │   multipleReqs(req1: Int!, req2: Int!): String
    │                ─────┬────  
    │                     ╰────── argument defined here
────╯
Error: the required argument `ComplicatedArgs.multipleOptAndReq(req2:)` is not provided
    ╭─[ 0054_argument_not_provided.graphql:27:5 ]
    │
 27 │     b: multipleOptAndReq(req1: 1)
    │     ──────────────┬──────────────  
    │                   ╰──────────────── missing value for argument `req2`
    │
    ├─[ 0054_argument_not_provided.graphql:27:5 ]
    │
  3 │   multipleOptAndReq(req1: Int!, req2: Int!, opt1: Int = 0, opt2: Int = 0): String
    │                                 ─────┬────  
    │                                      ╰────── argument defined here
────╯
Error: the required argument `ComplicatedArgs.multipleOptAndReq(req2:)` is not provided
    ╭─[ 0054_argument_not_provided.graphql:28:5 ]
    │
 28 │     c: multipleOptAndReq(opt1: 1, opt2: 1, req1: 1)
    │     ───────────────────────┬───────────────────────  
    │                            ╰───────────────────────── missing value for argument `req2`
    │
    ├─[ 0054_argument_not_provided.graphql:28:5 ]
    │
  3 │   multipleOptAndReq(req1: Int!, req2: Int!, opt1: Int = 0, opt2: Int = 0): String
    │                                 ─────┬────  
    │                                      ╰────── argument defined here
────╯

